log/2022-03-24T14:20:28+08:00.log
[33m[01m[05m[ You are changing the branch: lab1-1-exam ][0m
Autotest: Begin at Thu Mar 24 14:20:28 CST 2022
[32m[ readelf.c found ][0m
rm -rf *.o
rm readelf
rm: cannot remove 'readelf': No such file or directory
make: *** [Makefile:16: clean] Error 1
gcc -I./ -c main.c
gcc -I./ -c readelf.c
readelf.c: In function 'readelf':
readelf.c:74:57: error: 'Elf32_Shdr' {aka 'struct <anonymous>'} has no member named 'offset'; did you mean 'sh_offset'?
   74 |              printf("Read:%d:0x%x,0x%x\n", order, shdr->offset, shdr->sh_addr);
      |                                                         ^~~~~~
      |                                                         sh_offset
make: *** [Makefile:6: readelf.o] Error 1
[31m[01m[ Cannot find your readelf. Please check your readelf.c. ][0m
[33m[01m[ You got 10 (of 100) this time. Thu Mar 24 14:20:30 CST 2022 ][0m
Autotest: End at Thu Mar 24 14:20:30 CST 2022
